# wikiExplorer

./: .gitignore  README.md  deploy.sh  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
backend/: app.py  config.py  reqs.txt  run.sh
backend/core/: console.py  cross_edges.py  ranking.py  search_engine.py
backend/models/: __init__.py
backend/routes/: cluster_routes.py  comparison_routes.py  health_routes.py  public_search_routes.py  search_routes.py
backend/services/: graph_calculations.py
backend/wikiexplorer-rust/: Cargo.toml
backend/wikiexplorer-rust/src/: main.rs
frontend/: index.html  package-lock.json  package.json  run.sh  tailwind.config.js  tsconfig.node.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Counter.tsx  FileMenu.tsx  FindNode.tsx  GraphCanvas.tsx  GraphCanvas2D.tsx  GraphComparison.tsx  MobileInterface.tsx  MobileMenu.tsx  NodeOutline.tsx  QualityToggle.tsx  RefreshButton.tsx  SaveGraphButton.tsx  SearchBar.tsx  StatsButton.tsx
frontend/src/components/graph/: MistEffect.ts  NodeRenderer.ts  SceneSetup.ts
frontend/src/components/graph2d/: GraphCameraController.tsx  GraphDataController.tsx  GraphInteractionLayer.tsx  GraphLayoutEngine.tsx  GraphSettings.ts
frontend/src/components/modals/: AboutModal.tsx  GraphStats.tsx  PrivacyModal.tsx
frontend/src/hooks/: useArticleLoader.ts  useGraphRefresh.ts  useNodeExpander.ts
frontend/src/lib/: wikipedia.ts
frontend/src/services/: graphCalculations.ts  graphStats.ts  linkCache.ts
frontend/src/stores/: graphStore.ts
rs/: Cargo.toml
rs/src/: config.rs  main.rs  state.rs
rs/src/models/: mod.rs
rs/src/routes/: search.rs
rs/src/search/: cross_edges.rs  engine.rs  ranking.rs
rs/src/utils/: errors.rs
scripts/: test_search.py
src/: App.tsx  index.css  vite-env.d.ts
src/components/: GraphCanvas.tsx  LoadGraphButton.tsx  RefreshButton.tsx  SearchBar.tsx  SideBar.tsx
src/components/graph/: MistEffect.ts  NodeRenderer.ts  SceneSetup.ts  Shaders.ts
src/components/modals/: Explore.tsx  GraphStats.tsx  WikiModal.tsx
src/hooks/: useArticleLoader.ts  useNodeExpander.ts
src/lib/: wiki.ts  wikipedia.ts
src/server/: api.py  server.py
src/services/: graphCalculations.ts
src/stores/: graphStore.ts
src/types/: index.ts
