[package]
name = "wikiexplorer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"
config = "0.13"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Math & Regex
regex = "1.10"
ndarray = "0.15"

# ML & Vector Search
# NOTE: Requires libfaiss and libtorch/libopenblas installed on the system
faiss = "0.12.0" 
rust-bert = "0.21.0" 

# Concurrency primitives
parking_lot = "0.12" 
once_cell = "1.19"