[package]
name = "wikiexplorer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework (like Flask)
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization (like json.dumps/loads)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres"] }

# FAISS bindings
faiss = "0.13"  # Rust bindings to C++ FAISS

# Sentence transformers via Python (temporary bridge)
pyo3 = { version = "0.23", features = ["auto-initialize"] }

# Environment variables
dotenvy = "0.15"

# Logging (replaces your console.py)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (for Wikipedia API)
reqwest = { version = "0.12", features = ["json"] }

# Linear algebra (for vector ops)
ndarray = "0.16"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"